2009-03-02  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/39335
	* testsuite/gcc.dg/graphite/pr39335_1.c: New.
	* testsuite/gcc.dg/graphite/pr39335.c: New.

2009-03-02  H.J. Lu  <hongjiu.lu@intel.com>

	* gcc.target/i386/stackalign/return-4.c: Scan andl/andq instead
	of andl.
	* gcc.target/i386/stackalign/return-5.c: Likewise.
	* gcc.target/i386/stackalign/return-6.c: Likewise.

2009-03-02  Richard Guenther  <rguenther@suse.de>
	    Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/39318
	* gfortran.dg/vect/pr39318.f90: New test.

2009-03-01  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/debug/dwarf2/ipa-cp1.c: New testcase.

2009-03-01  Jan Hubicka  <jh@suse.cz>

	PR debug/39267
	* gcc.dg/debug/dwarf2/inline1.c: New testcase.

2009-03-01  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/pack12.adb: New test.

2009-02-26  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/37789
	* other/pr37789.C: New.

2009-02-26  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/39295
	* gfortran.dg/interface_25.f90: New test.
	* gfortran.dg/interface_26.f90: New test.

2009-02-26  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/39292
	* gfortran.dg/initialization_22.f90: New test.

2009-02-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/39241
	* gcc.dg/torture/pr39241.c: New.

2009-02-25  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimizations/39259
	* g++.dg/torture/pr39259.C: New testcase.

2009-02-24  Richard Guenther  <rguenther@suse.de>

	PR c++/39242
	* g++.dg/template/instantiate10.C: New testcase.

2009-02-24  Richard Guenther  <rguenther@suse.de>
	    Zdenek Dvorak  <ook@ucw.cz>

	PR tree-optimization/39233
	* gcc.c-torture/execute/pr39233.c: New testcase.

2009-02-23  Sebastian Pop  <sebastian.pop@amd.com>

	PR tree-optimization/39260
	* gcc.dg/graphite/pr39260.c: New.

2009-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	* g++.dg/init/static-init1.C: Replace int with __PTRDIFF_TYPE__.

2009-02-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR c++/36411