@@ -2288,7 +2288,8 @@ proc check_effective_target_vect_short_mult { } {
 	     || [istarget spu-*-*]
 	     || [istarget i?86-*-*]
 	     || [istarget x86_64-*-*] 
-             || [istarget powerpc*-*-*] } {
+             || [istarget powerpc*-*-*] 
+             || [check_effective_target_arm32] } {
 	   set et_vect_short_mult_saved 1
 	}
     }
